--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,11 @@
   border-radius: .5rem;
   transition: .3s;
 }
+
+.blur {
+  background: rgba(253, 120, 43, .69);
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(150px);
+  z-index: -9;
+}
