--- a/src/components/Plans/Plans.css
+++ b/src/components/Plans/Plans.css
@@ -1,79 +1,107 @@
 .plans-container {
-  margin-top: -4rem;
-  padding: 0 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 4rem;
-  position: relative;
+	margin-top: -4rem;
+	padding: 0 2rem;
+	display: flex;
+	flex-direction: column;
+	gap: 4rem;
+	position: relative;
 }
 
 .plans {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 3rem;
 }
 
 .plan {
-  display: flex;
-  flex-direction: column;
-  background: var(--caloryCard);
-  padding: 1.5rem;
-  color: white;
-  gap: 2rem;
-  border-radius: .5rem;
-  width: 15rem;
+	display: flex;
+	flex-direction: column;
+	background: var(--caloryCard);
+	padding: 1.5rem;
+	color: white;
+	gap: 2rem;
+	border-radius: 0.5rem;
+	width: 15rem;
 }
 
 .plan:nth-child(2) {
-  background: var(--planCard);
-  transform: scale(1.1);
+	background: var(--planCard);
+	transform: scale(1.1);
 }
 
-.plan>svg {
-  fill: var(--orange);
-  width: 2rem;
-  height: 2rem;
+.plan > svg {
+	fill: var(--orange);
+	width: 2rem;
+	height: 2rem;
 }
 
-.plan>:nth-child(2) {
-  font-size: 1rem;
-  font-weight: bold;
+.plan > :nth-child(2) {
+	font-size: 1rem;
+	font-weight: bold;
 }
 
-.plan>:nth-child(3) {
-  font-size: 3rem;
-  font-weight: bold;
+.plan > :nth-child(3) {
+	font-size: 3rem;
+	font-weight: bold;
 }
 
-.plan>:nth-child(5) {
-  font-size: .8rem;
+.plan > :nth-child(5) {
+	font-size: 0.8rem;
 }
 
 .features {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 .feature {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+	display: flex;
+	align-items: center;
+	gap: 1rem;
 }
 
-.feature>img {
-  width: 1rem;
+.feature > img {
+	width: 1rem;
 }
 
-.plan:nth-child(2)>svg {
-  fill: white;
+.plan:nth-child(2) > svg {
+	fill: white;
 }
 
-.plan:nth-child(2)>button {
-  color: orange;
+.plan:nth-child(2) > button {
+	color: orange;
 }
 
-.plan>button:hover {
-  opacity: .7;
+.plan > button:hover {
+	opacity: 0.7;
+}
+
+.plans-blur1 {
+	width: 32rem;
+	height: 23rem;
+	top: 6rem;
+	left: 0rem;
+}
+
+.plans-blur2 {
+	width: 32rem;
+	height: 23rem;
+	top: 10rem;
+	right: 0rem;
+}
+
+@media (max-width: 768px) {
+	.plans {
+		flex-direction: column;
+	}
+
+  .plans>:nth-child(2) {
+    transform: none;
+  }
+
+	.plans-blur2 {
+		top: 50%;
+	}
 }
