--- a/src/components/Testimonials/Testimonials.css
+++ b/src/components/Testimonials/Testimonials.css
@@ -75,3 +75,47 @@
   width: 1.5rem;
   cursor: pointer;
 }
+
+@media (max-width:768px) {
+  .testimonials {
+    flex-direction: column;
+    padding-top: 4rem;
+    margin-top: -3rem;
+  }
+
+  .left-t>:nth-child(2), .left-t>:nth-child(3) {
+    font-size: xx-large;
+  }
+
+  .right-t {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+  }
+
+  .right-t>div {
+    position: relative;
+    display: none;
+  }
+
+  .right-t>img {
+    top: 0;
+    right: 0;
+    position: relative;
+    align-self: center;
+    margin-top: 1.5rem;
+  }
+
+  .right-t>:last-child {
+    display: block;
+    bottom: 0;
+    left: 0;
+  }
+
+  .right-t>:last-child>img {
+    height: 22.5px;
+    margin: 0 .5rem;
+  }
+}
